# mice

./: .gitignore  Cargo.toml  build.rs  index.html  package-lock.json  tailwind.config.js
proto/: message.proto
src/: app.rs  client.rs  container.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: message.proto
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  proto_types.rs
src-tauri/src/handler_services/: chat_service.rs  mod.rs  state_accessor.rs
ui/: MainWindow.slint
